fix: Performance still ticks if HUD is hidden Console now initializes hidden by default.

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,7 @@ canvas {
 }
 
 #debug-hud {
+    display: none;
     position: absolute;
     padding-top: 1%;
     width: 33%;
